# toy-opencv-mat-socket-server

./: README.md
src/: CMakeLists.txt  socket-client.cpp  socket-client.hpp  socket-server.cpp  socket-server.hpp  socket_client.cpp  socket_client.hpp  socket_common.hpp  socket_server.cpp  socket_server.hpp
src/sample/: get-image-names.py  helpers.cpp  helpers.hpp  main.cpp  sample_client.cpp  sample_server.cpp
